tests/ui/consts/enum-discr-type-err.stderr
error[E0308]: mismatched types
  --> $DIR/enum-discr-type-err.rs:18:21
   |
LL |               $( $v = $s::V, )*
   |                       ^^^^^ expected `isize`, found `i32`
...
LL | / mac! {
LL | |     A = F,
LL | |     B = T,
LL | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/enum-discr-type-err.rs:18:21
   |
LL |               $( $v = $s::V, )*
   |                       ^^^^^ expected `isize`, found `i32`
...
LL | / mac! {
LL | |     A = F,
LL | |     B = T,
LL | | }
   | |_- in this macro invocation
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
   = note: this error originates in the macro `mac` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
